k8s-config/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: www.heartbeat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heartbeat-frontend-service
                port:
                  number: 80
    - host: api.heartbeat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
